--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="modal" class="modal none">
     <div class="modal-content" id="modal-content">
-      <p id="modal-text">Информация появится здесь</p>
+      <p id="modal-text"></p>
     </div>
   </div>
   
