--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   
     <button class="ButtonOpen" onclick="handleClick()"></button>
 <nav class="nav">
-    <section class="section selected">particle</section>
-    <section class="section">times</section>
-    <section class="section">Settings</section>
-    <section class="section hiden">d</section>
+    <button class="section sectionHome" onclick="handleClickHome()">Home</button>
+    <button class="section sectionParticle" onclick="handleClickParticle()">Particle</button>
+    <button class="section sectionTimes" onclick="handleClickTimes()">Times</button>
+    <button class="section sectionSettings" onclick="handleClickSettings()">Settings</button>
 </nav>
 
-<main>
+<div class="mainParticle">
     <!-- Артиклі -->
-    <div class="ConteinerIndex">
+    <div class="ConteinerIndex FirstConIN">
       <section class="index ">the</section>
       <section class="index ">a</section>
       <section class="index ">an</section>
@@ -86,7 +86,7 @@
       <section class="index ">will</section>
       <section class="index ">would</section>
     </div>
-  </main>
+  </div>
 
 <script src="./LingoLens.js"></script>
 </body>
