Adding content to tabs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
     <button class="section sectionSettings" onclick="handleClickSettings()">Settings</button>
 </nav>
 
-<div class="mainParticle">
+<div class="main mainHome">
+  <div class="Hibox">
+    <p class="Hitext">Привіт, це проєкт LingoLens, надіюсь тобі сподобається)</p>
+  </div>
+   <div class="Hibox News">
+    <p class="Hitext">Тут шось буде</p>
+  </div>
+    <div class="Hibox">
+    <p class="Hitext">І тут)</p>
+  </div>
+</div>
+
+<div class="main mainParticle">
     <!-- Артиклі -->
     <div class="ConteinerIndex FirstConIN">
       <section class="index ">the</section>
@@ -88,6 +100,35 @@
     </div>
   </div>
 
+  <div class="main mainTimes">
+<div class="ConteinerIndexTimes FirstConIN">
+  <section class="indexTimes">Present Simple</section>
+  <section class="indexTimes">Present Continuous</section>
+  <section class="indexTimes">Present Perfect</section>
+</div>
+<div class="ConteinerIndexTimes">
+  <section class="indexTimes">Present Perfect Continuous</section>
+  <section class="indexTimes">Past Simple</section>
+  <section class="indexTimes">Past Continuous</section>
+</div>
+<div class="ConteinerIndexTimes">
+  <section class="indexTimes">Past Perfect</section>
+  <section class="indexTimes">Past Perfect Continuous</section>
+  <section class="indexTimes">Future Simple</section>
+</div>
+<div class="ConteinerIndexTimes">
+  <section class="indexTimes">Future Continuous</section>
+  <section class="indexTimes">Future Perfect</section>
+  <section class="indexTimes">Future Perfect Continuous</section>
+</div>
+
+  </div>
+
+  <div class="main mainSettings">
+    <div class="sorry">
+      <p>Вибач, цей функціонал тимчасово недоступний😅</p>
+    </div>
+  </div>
 <script src="./LingoLens.js"></script>
 </body>
 </html>
