--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button class="section sectionParticle" onclick="handleClickParticle()">Particle</button>
     <button class="section sectionTimes" onclick="handleClickTimes()">Times</button>
     <button class="section sectionSettings" onclick="handleClickSettings()">Settings</button>
+    <img class="section secured" src="./source/free-icon-font-key-3914633.svg" alt="key" onclick="handleLockNav()">
 </nav>
 
 <div class="main mainHome">
@@ -36,14 +37,12 @@
 </div>
 
 <div class="main mainParticle">
-    <!-- Артиклі -->
     <div class="ConteinerIndex FirstConIN">
       <section class="index ">the</section>
       <section class="index ">a</section>
       <section class="index ">an</section>
     </div>
   
-    <!-- Прийменники місця та часу -->
     <div class="ConteinerIndex">
       <section class="index ">in</section>
       <section class="index ">on</section>
@@ -52,15 +51,13 @@
       <section class="index ">over</section>
       <section class="index ">behind</section>
     </div>
-  
-    <!-- Прийменники часу -->
+
     <div class="ConteinerIndex">
       <section class="index ">in</section>
       <section class="index ">on</section>
       <section class="index ">at</section>
     </div>
   
-    <!-- Інші прийменники -->
     <div class="ConteinerIndex">
       <section class="index ">of</section>
       <section class="index ">for</section>
@@ -69,7 +66,6 @@
       <section class="index ">about</section>
     </div>
   
-    <!-- Додатково: частки як to, not, up -->
     <div class="ConteinerIndex">
       <section class="index ">to</section>
       <section class="index ">not</section>
@@ -79,7 +75,6 @@
       <section class="index ">away</section>
     </div>
   
-    <!-- Сполучники -->
     <div class="ConteinerIndex">
       <section class="index ">and</section>
       <section class="index ">but</section>
@@ -89,7 +84,6 @@
       <section class="index ">so</section>
     </div>
   
-    <!-- Модальні дієслова -->
     <div class="ConteinerIndex">
       <section class="index ">can</section>
       <section class="index ">could</section>
