--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
 </nav>
 
 <div class="main mainHome">
-  <div class="Hibox">
-    <p class="Hitext">Привіт, це проєкт LingoLens, надіюсь тобі сподобається)</p>
-  </div>
-   <div class="Hibox News">
-    <p class="Hitext">Тут шось буде</p>
-  </div>
-    <div class="Hibox">
-    <p class="Hitext">І тут)</p>
+  <div class="Hibox" id="draggable">
+  <textarea id="myText" rows="4" cols="50" placeholder="Введите текст..."></textarea>
   </div>
 </div>
 
