--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
 </nav>
 
 <div class="main mainHome">
-  <div class="Hibox" id="draggable">
-  <textarea id="myText" rows="4" cols="50" placeholder="Введите текст..."></textarea>
+  <div class="IndividualHome">
+    <div class="AboutUs">
+    <img class="AboutUsIcon" src="./source/free-icon-font-telegram-6422206.svg" alt="">
+    <img class="AboutUsIcon" src="./source/free-icon-font-instagram-6422200.svg" alt="">
+    <img class="AboutUsIcon" src=".//source/free-icon-font-tik-tok-6422207.svg" alt="">
   </div>
+  <img class="AccountHomeImg" src="./source/завантаження.svg" alt="">
+  </div>
+  <div class="Hibox" id="draggable">
+  <textarea id="myText" rows="4" cols="50" placeholder="Введіть текст..."></textarea>
+</div>
+
+<div id="messages"></div>
 </div>
 
 <div class="main mainParticle">
