--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./source/LingoLens_icon.png">
-    <link rel="stylesheet" href="./LingoLens.css">
-    <link rel="stylesheet" href="./ResetStyle.css">
-    <title>LingoLens</title>
-
-  <div class="MainRegbox">
-    <div class="Regbox" id="reg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="./source/LingoLens_icon.png">
+  <link rel="stylesheet" href="./LingoLens.css">
+  <link rel="stylesheet" href="./ResetStyle.css">
+  <title>LingoLens</title>
+</head>
+<body>
+  <div class="main-regbox">
+    <div class="regbox" id="reg">
       <h2>Реєстрація</h2>
-  <input class="InputField" type="text" id="username" placeholder="Ім’я користувача">
-<input class="InputField" type="email" id="email" placeholder="Email">
-<input class="InputField" type="password" id="password" placeholder="Пароль">
-<input class="InputField" type="password" id="confirmPassword" placeholder="Повторіть пароль">
-<button class="RegisterButton" onclick="register()">Зареєструватися</button>
+      <input class="input-field" type="text" id="username" placeholder="Ім’я користувача">
+      <input class="input-field" type="email" id="email" placeholder="Email">
+      <input class="input-field" type="password" id="password" placeholder="Пароль">
+      <input class="input-field" type="password" id="confirmPassword" placeholder="Повторіть пароль">
+      <button class="register-button" onclick="register()">Зареєструватися</button>
       <div class="note">
-        Вже є акаунт? <button class="login"  onclick="loginButton()">Увійти</button> 
+        Вже є акаунт? <button class="login" onclick="showLogin()">Увійти</button>
       </div>
     </div>
 
-     <div class="Regbox" id="log">
+    <div class="regbox" id="log">
       <h2>Вхід</h2>
-  <input class="InputField" type="text" id="usernameLogin" placeholder="Ім’я користувача">
-<input class="InputField" type="password" id="passwordLogin" placeholder="Пароль">
-<button class="RegisterButton" onclick="login()">Увійти</button>
+      <input class="input-field" type="text" id="usernameLogin" placeholder="Ім’я користувача">
+      <input class="input-field" type="password" id="passwordLogin" placeholder="Пароль">
+      <button class="register-button" onclick="login()">Увійти</button>
       <div class="note">
-        Повернутись? <button class="login"  onclick="loginButtonBack()">Назад</button> 
+        Повернутись? <button class="login" onclick="showRegister()">Назад</button>
       </div>
     </div>
   </div>
-    </div>
-    </div>
-    <script src="./LingoLens.js"></script>
+
+  <script src="./LingoLens.js"></script>
 </body>
 </html>
